--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -42,3 +42,31 @@ jobs:
         uses: docker/setup-buildx-action@v2
       - name: Build via Docker Compose
         uses: hoverkraft-tech/compose-action@v2.2.0
+
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+      
+      - name: Copy project to server
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERSERV }}
+          key: ${{ secrets.SSH_KEY }}
+          source: "."
+          target: "/home/user/project"
+
+      - name: Executing remote ssh commands to deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERSERV }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            cd /home/user/project/ 
+            sudo docker-compose -f docker-compose.yml pull
+            sudo docker-compose -f docker-compose.yml down
+            sudo docker-compose -f docker-compose.yml up -d
