--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -46,7 +46,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: run-with-docker-compose
+    needs: [build_and_push_to_docker_hub, run-with-docker-compose]
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
