add multisage Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,5 @@
-FROM golang:1.21
+# Этап 1 сборка
+FROM golang:1.21-alpine AS builder
 
 WORKDIR /app
 
@@ -8,6 +9,13 @@ RUN go mod download
 COPY . .
 
 RUN go build -o app ./cmd/api
+
+# Этап 2 создание минимального образа
+FROM alpine:latest
+
+WORKDIR /app
+
+COPY --from=builder /app/app .
 
 EXPOSE 8081
 
