change multisage Dockerfile frontend

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,6 +7,9 @@ COPY package*.json ./
 RUN npm install
 
 COPY . .
+
+ENV NODE_OPTIONS=--openssl-legacy-provider
+
 RUN npm run build
 
 # Этап 2 создание минимального образа
