--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
     image: arturdzh/docker-project-frontend:latest
     ports:
       - "80:80"
-    environment:
-      - NODE_OPTIONS=--openssl-legacy-provider
+    # environment:
+    #   - NODE_OPTIONS=--openssl-legacy-provider
     volumes:
       - ./frontend:/app
       - /app/node_modules
