--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,9 +2,11 @@ server {
   listen 80;
   server_name localhost;
 
-  location /momo-store/ {
-    root /usr/share/nginx/html;
-    index index.html;
-    try_files $uri $uri/ /momo-store/index.html;
+  root /usr/share/nginx/html/momo-store;
+  index index.html;
+
+  location / {
+    try_files $uri $uri/ /index.html;
   }
 }
+
