--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,12 +1,13 @@
 server {
-  listen 80;
-  server_name localhost;
+    listen 80;
+    server_name localhost;
 
-  root /usr/share/nginx/html;
-  index index.html;
+    location /momo-store/ {
+        alias /usr/share/nginx/html/momo-store/;
+        try_files $uri $uri/ /momo-store/index.html;
+    }
 
-  location / {
-    try_files $uri $uri/ /index.html;
-  }
+    location = / {
+        return 302 /momo-store/;
+    }
 }
-
