--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -4,6 +4,7 @@ server {
 
     location /momo-store/ {
         alias /usr/share/nginx/html/momo-store/;
+        index index.html;
         try_files $uri $uri/ /momo-store/index.html;
     }
 
