--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,13 +2,26 @@ server {
     listen 80;
     server_name localhost;
 
+
+    location = / {
+        return 302 /momo-store/;
+    }
+
+    location /api/ {
+        proxy_pass http://backend:8081;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+
     location /momo-store/ {
         alias /usr/share/nginx/html/momo-store/;
         index index.html;
         try_files $uri $uri/ /momo-store/index.html;
     }
 
-    location = / {
-        return 302 /momo-store/;
-    }
+    
 }
