--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -16,6 +16,15 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
+    location /auth/ {
+    proxy_pass http://backend:8081;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
+    }
+
 
     location /momo-store/ {
         alias /usr/share/nginx/html/momo-store/;
