--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,29 +2,33 @@ server {
     listen 80;
     server_name localhost;
 
-
+    # Редирект с корня на фронтенд
     location = / {
         return 302 /momo-store/;
     }
 
+    # Прокси для API-запросов с сохранением пути
     location /api/ {
-        proxy_pass http://backend:8081/;
+        proxy_pass http://backend:8081$request_uri;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
     }
 
     location /auth/ {
-        proxy_pass http://backend:8081/;
+        proxy_pass http://backend:8081$request_uri;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
     }
 
-
+    # Фронтенд (Vue) — отдаём файлы из папки /usr/share/nginx/html/momo-store/
     location /momo-store/ {
         alias /usr/share/nginx/html/momo-store/;
         index index.html;
         try_files $uri $uri/ /momo-store/index.html;
     }
-
-    
 }
+
