--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,7 +9,7 @@ server {
 
     # Прокси для API-запросов с сохранением пути
     location /api/ {
-        proxy_pass http://backend:8081$request_uri;
+        proxy_pass http://158.160.98.215:8081$request_uri;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_http_version 1.1;
@@ -17,7 +17,7 @@ server {
     }
 
     location /auth/ {
-        proxy_pass http://backend:8081$request_uri;
+        proxy_pass http://158.160.98.215:8081$request_uri;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_http_version 1.1;
