--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -24,6 +24,11 @@ server {
         proxy_set_header Connection "";
     }
 
+    location /momo-store/products/ {
+        proxy_pass http://backend:8081$request_uri;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
     # Фронтенд (Vue) — отдаём файлы из папки /usr/share/nginx/html/momo-store/
     location /momo-store/ {
         alias /usr/share/nginx/html/momo-store/;
