--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,6 +2,8 @@ server {
     listen 80;
     server_name localhost;
 
+    resolver 127.0.0.11 valid=30s;
+
     # Редирект с корня на фронтенд
     location = / {
         return 302 /momo-store/;
