--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,4 @@ services:
     volumes:
       - ./frontend:/app
       - /app/node_modules
+      - ./fronend/nginx.conf:/etc/nginx/conf.d/default.conf:ro
