change locaion momo-store

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -26,11 +26,12 @@ server {
         proxy_set_header Connection "";
     }
 
-    location /momo-store/products/ {
-        proxy_pass http://backend:8081$request_uri;
+    location ~ ^/momo-store/(products|categories|auth)/ {
+        proxy_pass http://backend:8081/$1/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
+    
     # Фронтенд (Vue) — отдаём файлы из папки /usr/share/nginx/html/momo-store/
     location /momo-store/ {
         alias /usr/share/nginx/html/momo-store/;
