--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,18 +5,10 @@ server {
     resolver 127.0.0.11 valid=30s;
 
     # Редирект с корня на фронтенд
-    location = / {
-        return 302 /momo-store/;
-    }
+    # location = / {
+    #     return 302 /momo-store/;
+    # }
 
-    # Прокси для API-запросов с сохранением пути
-    location /api/ {
-        proxy_pass http://158.160.98.215:8081$request_uri;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_http_version 1.1;
-        proxy_set_header Connection "";
-    }
 
     location /auth/ {
         proxy_pass http://158.160.98.215:8081$request_uri;
@@ -33,7 +25,7 @@ server {
     }
     
     # Фронтенд (Vue) — отдаём файлы из папки /usr/share/nginx/html/momo-store/
-    location /momo-store/ {
+    location / {
         alias /usr/share/nginx/html/momo-store/;
         index index.html;
         try_files $uri $uri/ /momo-store/index.html;
