--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -25,7 +25,7 @@ server {
     }
     
     # Фронтенд (Vue) — отдаём файлы из папки /usr/share/nginx/html/momo-store/
-    location / {
+    location /momo-store/ {
         alias /usr/share/nginx/html/momo-store/;
         index index.html;
         try_files $uri $uri/ /momo-store/index.html;
