--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,16 @@ services:
   backend:
     container_name: backend
     image: arturdzh/docker-project-backend:latest
-    ports:
-      - "8081:8081"
+    # ports:
+    #   - "8081:8081"
 
   frontend:
     container_name: frontend
     image: arturdzh/docker-project-frontend:latest
+    depends_on:
+      - backend
     ports:
       - "80:80"
-    # environment:
-    #   - NODE_OPTIONS=--openssl-legacy-provider
     volumes:
       - ./frontend:/app
       - /app/node_modules
