--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -4,14 +4,14 @@ server {
 
     resolver 127.0.0.11 valid=30s;
 
-    # Редирект с корня на фронтенд
-    # location = / {
-    #     return 302 /momo-store/;
-    # }
+    Редирект с корня на фронтенд
+    location = / {
+        return 302 /momo-store/;
+    }
 
 
     location /auth/ {
-        proxy_pass http://158.160.98.215:8081$request_uri;
+        proxy_pass http://backend:8081$request_uri;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_http_version 1.1;
