--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,11 @@ services:
   backend:
     container_name: backend
     image: arturdzh/docker-project-backend:latest
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8081/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     networks:
       - internal
 
@@ -11,13 +16,19 @@ services:
     container_name: frontend
     image: arturdzh/docker-project-frontend:latest
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
     ports:
       - "80:80"
     volumes:
       - ./frontend:/app
       - /app/node_modules
       - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     networks:
       - internal
 
