--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,8 @@ services:
     container_name: frontend
     image: arturdzh/docker-project-frontend:latest
     depends_on:
-      - backend
+      backend:
+        condition: service_healhy
     ports:
       - "80:80"
     volumes:
