--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     image: arturdzh/docker-project-frontend:latest
     depends_on:
       backend:
-        condition: service_healhy
+        condition: service_healthy
     ports:
       - "80:80"
     volumes:
