--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -70,4 +70,4 @@ jobs:
             cd /home/user/project/ 
             sudo docker-compose -f docker-compose.yml pull
             sudo docker-compose -f docker-compose.yml down
-            sudo docker-compose -f docker-compose.yml up -d
+            sudo docker-compose -f docker-compose.yml up -d --scale backend=1
