--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,3 +1,7 @@
+upstream backend_upstream {
+    server backend:8081;
+}
+
 server {
     listen 80;
     server_name localhost;
@@ -11,7 +15,7 @@ server {
 
 
     location /auth/ {
-        proxy_pass http://backend:8081$request_uri;
+        proxy_pass http://backend_upstream:8081$request_uri;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_http_version 1.1;
@@ -19,7 +23,7 @@ server {
     }
 
     location ~ ^/momo-store/(products|categories|auth)/ {
-        proxy_pass http://backend:8081/$1/;
+        proxy_pass http://backend_upstream:8081/$1/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
