--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,5 +1,6 @@
 upstream backend_upstream {
     server backend:8081;
+    server backend_1:8081;
 }
 
 server {
@@ -15,7 +16,8 @@ server {
 
 
     location /auth/ {
-        proxy_pass http://backend_upstream:8081$request_uri;
+        # proxy_pass http://backend_upstream:8081$request_uri;
+        proxy_pass http://backend_upstream$request_uri;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_http_version 1.1;
@@ -23,7 +25,8 @@ server {
     }
 
     location ~ ^/momo-store/(products|categories|auth)/ {
-        proxy_pass http://backend_upstream:8081/$1/;
+        # proxy_pass http://backend_upstream:8081/$1/;
+        proxy_pass http://backend_upstream/$1/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
