--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+    mem_limit: 256m
+    cpus: 0.5
     networks:
       - internal
 
@@ -27,6 +29,8 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+    mem_limit: 256m
+    cpus: 0.3
     networks:
       - internal
 
