--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -16,14 +16,14 @@ RUN npm run build
 # Этап 2 создание минимального образа
 FROM nginx:alpine
 
+RUN addgroup -S frontendgroup && adduser -S appuser -G frontendgroup
+
 RUN rm -rf /usr/share/nginx/html/*
 
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 COPY --from=builder /app/dist /usr/share/nginx/html/momo-store
 
+USER appuser 
+
 EXPOSE 80
-
-# EXPOSE 8080
-
-# CMD [ "npm", "run", "serve" ]
