--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -16,7 +16,7 @@ RUN npm run build
 # Этап 2 создание минимального образа
 FROM nginx:alpine
 
-RUN addgroup -S frontendgroup && adduser -S appuser -G frontendgroup
+# RUN addgroup -S frontendgroup && adduser -S appuser -G frontendgroup
 
 RUN rm -rf /usr/share/nginx/html/*
 
@@ -24,6 +24,6 @@ COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 COPY --from=builder /app/dist /usr/share/nginx/html/momo-store
 
-USER appuser 
+USER nginx 
 
 EXPOSE 80
