--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,7 +1,8 @@
 upstream backend_upstream {
-    server project_backend_1:8081;
-    server project_backend_2:8081;
-    server project_backend_3:8081;
+    server backend:8081;
+    # server project_backend_1:8081;
+    # server project_backend_2:8081;
+    # server project_backend_3:8081;
 }
 
 server {
