--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,38 +1,19 @@
-upstream backend_upstream {
-    server backend:8081;
+user appuser;
+worker_processes auto;
+pid /tmp/nginx.pid;
+
+events {
+    worker_connections 1024;
 }
 
-server {
-    listen 80;
-    server_name localhost;
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    sendfile        on;
+    keepalive_timeout 65;
 
     resolver 127.0.0.11 valid=30s;
 
-
-    location = / {
-        return 302 /momo-store/;
-    }
-
-
-    location /auth/ {
-        proxy_pass http://backend_upstream$request_uri;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_http_version 1.1;
-        proxy_set_header Connection "";
-    }
-
-    location ~ ^/momo-store/(products|categories|auth)/ {
-        proxy_pass http://backend_upstream/$1/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
-    
-    # Фронтенд (Vue) — отдаём файлы из папки /usr/share/nginx/html/momo-store/
-    location /momo-store/ {
-        alias /usr/share/nginx/html/momo-store/;
-        index index.html;
-        try_files $uri $uri/ /momo-store/index.html;
-    }
+    include /etc/nginx/conf.d/*.conf;
 }
-
