--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -24,7 +24,7 @@ RUN mkdir -p /var/cache/nginx/client_temp \
  && chown -R appuser:appgroup /var/cache/nginx
 
 COPY default.conf /etc/nginx/conf.d/default.conf
-COPY nginx /etc/nginx/nginx.conf
+COPY nginx.conf /etc/nginx/nginx.conf
 
 COPY --from=builder /app/dist /usr/share/nginx/html/momo-store
 
