--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -45,10 +45,45 @@ jobs:
       - name: Build via Docker Compose
         uses: hoverkraft-tech/compose-action@v2.2.0
 
+  trivy:
+    runs-on: ubuntu-latest
+    needs: [build_and_push_to_docker_hub, run-with-docker-compose]
+    strategy:
+      matrix:
+        image:
+          - arturdzh/docker-project-frontend:latest
+          - arturdzh/docker-project-backend:latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Scan ${{ matrix.image }} with Trivy
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: image
+          image-ref: ${{ matrix.image }}
+          format: json
+          ignore-unfixed: true
+          vuln-type: os,library
+          severity: CRITICAL,HIGH
+          exit-code: 0 
+
+      - name: Rename report for ${{ matrix.image }}
+        run: |
+          SAFE_NAME=$(echo "${{ matrix.image }}" | tr '/:' '_')
+          mv trivy-report.json trivy-${SAFE_NAME}.json
+
+      - name: Upload Trivy Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: trivy-${{ matrix.image }}
+          path: trivy-${{ matrix.image }}.json
+  
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: [build_and_push_to_docker_hub, run-with-docker-compose]
+    needs: trivy
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
