--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -6,11 +6,12 @@ server {
     listen 8080;
     server_name localhost;
 
-    resolver 127.0.0.11 valid=30s;
+    set $external_port 80;
+
 
 
     location = / {
-        return 302 /momo-store/;
+        return 302 http://$host:$external_port/momo-store/;
     }
 
 
